using Microsoft.AspNetCore.Identity;

namespace MTG_Emulator.Backend.DB.Models
{
    public class ApiRole : IdentityRole
    {
    
    }   
}